@@ -1,5 +1,6 @@
 20131018 - fhabermann
 * enable move of content
+* added select page option for page
 
 20131017 - fhabermann
 * composer update
